--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
+  "version": 2,
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
 
-    "version": 2,
-    "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
-  }
-  
+  "routes": [{ "src": "/(.*)", "dest": "/" }],
+  "cron": [
+    {
+      "path": "/api/run_scrape.ts",
+      "schedule": "0 5 * * *"
+    }
+  ]
+}
