--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
 
   "routes": [{ "src": "/(.*)", "dest": "/" }],
-  "cron": [
+  "crons": [
     {
       "path": "/api/run_scrape.ts",
       "schedule": "*/5 * * * *"
