--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@supabase/supabase-js": "^2.12.1",
     "cheerio": "*",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "node-fetch": "^2.6.9",
     "puppeteer": "^19.8.0"
   }
