--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/jsynowiec/node-typescript-boilerplate#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.10",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
