--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^2.6.9",
+    "puppeteer": "^19.8.2",
     "puppeteer-core": "^10.4.0"
   }
 }
