--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.12.1",
     "cheerio": "*",
-    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^2.6.9",
-    "puppeteer": "^19.8.2",
-    "puppeteer-core": "^10.4.0"
+    "puppeteer": "^19.8.2"
   }
 }
