--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "moduleResolution": "node",
       "sourceMap": true
     },
-    "include": ["src", "api"],
+    "include": ["src", "src/api"],
     "exclude": ["node_modules"]
   }
 
